--- a/src/components/Invoice/InvoicePage.module.css
+++ b/src/components/Invoice/InvoicePage.module.css
@@ -67,6 +67,7 @@ a:visited {
   border-radius: 8px;
   background: var(--invoice-item-bg);
   padding: 1.5rem 1.5rem 6rem 1.5rem;
+  text-transform: capitalize;
 }
 
 .description {
@@ -179,6 +180,7 @@ a:visited {
 
 .sendTo {
   grid-area: sendTo;
+  text-transform: lowercase;
 }
 
 .footer {
