--- a/src/components/layouts/buttons/Button.module.css
+++ b/src/components/layouts/buttons/Button.module.css
@@ -5,6 +5,7 @@ button {
     font-family: "Spartan", sans-serif;
     font-weight: 600;
     font-size: 0.75rem;
+    cursor: pointer;
 }
 
 .btnQuaternary {
